# protolint

./: BUILD.bazel  MODULE.bazel  bazel-bin  bazel-out  bazel-protolint  bazel-testlogs
_example/gradle/src/main/proto/: BUILD.bazel
_example/plugin/: BUILD.bazel
_example/plugin/customrules/: BUILD.bazel
_example/proto/issue_111/: BUILD.bazel
_example/proto/issue_128/: BUILD.bazel
_example/proto/issue_140/: BUILD.bazel
_example/proto/issue_292/: BUILD.bazel
_example/proto/issue_88/: BUILD.bazel
_proto/: BUILD.bazel
_testdata/autodisable/: BUILD.bazel
_testdata/lib/: BUILD.bazel
_testdata/parser/: BUILD.bazel
_testdata/rules/: BUILD.bazel
_testdata/rules/enumFieldNamesPrefix/: BUILD.bazel
_testdata/rules/enumFieldNamesUpperSnakeCase/: BUILD.bazel
_testdata/rules/enumFieldNamesZeroValueEndWith/: BUILD.bazel
_testdata/rules/enumNamesUpperCamelCase/: BUILD.bazel
_testdata/rules/fieldNamesLowerSnakeCase/: BUILD.bazel
_testdata/rules/fileNamesLowerSnakeCase/: BUILD.bazel
_testdata/rules/importsSorted/: BUILD.bazel
_testdata/rules/messageNamesUpperCamelCase/: BUILD.bazel
_testdata/rules/order/: BUILD.bazel
_testdata/rules/proto3FieldsAvoidRequired/: BUILD.bazel
_testdata/rules/proto3GroupsAvoid/: BUILD.bazel
_testdata/rules/quoteConsistent/: BUILD.bazel
_testdata/rules/repeatedFieldNamesPluralized/: BUILD.bazel
_testdata/rules/rpcNamesUpperCamelCase/: BUILD.bazel
_testdata/rules/serviceNamesUpperCamelCase/: BUILD.bazel
_testdata/testdir/: BUILD.bazel
_testdata/testdir/innerdir/: BUILD.bazel
_testdata/visitor/: BUILD.bazel
cmd/pl/: BUILD.bazel
cmd/protoc-gen-protolint/: BUILD.bazel
cmd/protolint/: BUILD.bazel
internal/addon/plugin/: BUILD.bazel
internal/addon/plugin/proto/: BUILD.bazel
internal/addon/plugin/shared/: BUILD.bazel
internal/addon/rules/: BUILD.bazel
internal/cmd/: BUILD.bazel
internal/cmd/protocgenprotolint/: BUILD.bazel
internal/cmd/subcmds/: BUILD.bazel
internal/cmd/subcmds/lint/: BUILD.bazel
internal/cmd/subcmds/list/: BUILD.bazel
internal/filepathutil/: BUILD.bazel
internal/linter/: BUILD.bazel
internal/linter/config/: BUILD.bazel
internal/linter/file/: BUILD.bazel
internal/linter/report/: BUILD.bazel
internal/linter/report/reporters/: BUILD.bazel
internal/linter/rule/: BUILD.bazel
internal/osutil/: BUILD.bazel
internal/setting_test/: BUILD.bazel
internal/stringsutil/: BUILD.bazel
internal/util_test/: BUILD.bazel
lib/: BUILD.bazel
linter/autodisable/: BUILD.bazel
linter/disablerule/: BUILD.bazel
linter/fixer/: BUILD.bazel
linter/report/: BUILD.bazel
linter/rule/: BUILD.bazel
linter/strs/: BUILD.bazel
linter/visitor/: BUILD.bazel
plugin/: BUILD.bazel
