load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "plugin",
    srcs = [
        "grpcServer.go",
        "ruleGen.go",
        "ruleSet.go",
    ],
    importpath = "github.com/yoheimuta/protolint/plugin",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/addon/plugin/shared",
        "//internal/linter/file",
        "//linter/report",
        "//linter/rule",
        "@com_github_hashicorp_go_plugin//:go_default_library",
        "@com_github_yoheimuta_go_protoparser_v4//parser:go_default_library",
    ],
)
