load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "plugin_lib",
    srcs = ["main.go"],
    importpath = "github.com/yoheimuta/protolint/_example/plugin",
    visibility = ["//visibility:private"],
    deps = [
        "//_example/plugin/customrules",
        "//internal/addon/rules",
        "//linter/rule",
        "//plugin",
    ],
)

go_binary(
    name = "plugin",
    embed = [":plugin_lib"],
    visibility = ["//visibility:public"],
)
