load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "lib_proto",
    srcs = [
        "invalid.proto",
        "valid.proto",
    ],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "lib_go_proto",
    importpath = "github.com/yoheimuta/protolint/_testdata/lib",
    proto = ":lib_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "lib",
    embed = [":lib_go_proto"],
    importpath = "github.com/yoheimuta/protolint/_testdata/lib",
    visibility = ["//visibility:public"],
)
