load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "issue_123_proto",
    srcs = ["issue_123.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "issue_123_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/yoheimuta/protolint/_testdata/parser",
    proto = ":issue_123_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "parser",
    embed = [":issue_123_go_proto"],
    importpath = "github.com/yoheimuta/protolint/_testdata/parser",
    visibility = ["//visibility:public"],
)
