load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "examplepb_proto",
    srcs = ["max_line_length_rule.proto"],
    visibility = ["//visibility:public"],
    deps = ["//:root_proto"],
)

go_proto_library(
    name = "examplepb_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/yoheimuta/protolint/_testdata/rules",
    proto = ":examplepb_proto",
    visibility = ["//visibility:public"],
    deps = [
        "//:other.proto",
        "//:otherloooooooooooooooooooooooooonooooooooooooooooooooooog.proto",
    ],
)

go_library(
    name = "rules",
    embed = [":examplepb_go_proto"],
    importpath = "github.com/yoheimuta/protolint/_testdata/rules",
    visibility = ["//visibility:public"],
)
