load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "visitor_proto",
    srcs = [
        "disable_next.proto",
        "disable_this.proto",
        "invalid.proto",
    ],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "visitor_go_proto",
    importpath = "github.com/yoheimuta/protolint/_testdata/visitor",
    proto = ":visitor_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "visitor",
    embed = [":visitor_go_proto"],
    importpath = "github.com/yoheimuta/protolint/_testdata/visitor",
    visibility = ["//visibility:public"],
)
