load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "pl_lib",
    srcs = ["main.go"],
    importpath = "github.com/yoheimuta/protolint/cmd/pl",
    visibility = ["//visibility:private"],
    deps = ["//internal/cmd"],
)

go_binary(
    name = "pl",
    embed = [":pl_lib"],
    visibility = ["//visibility:public"],
)
