load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "protoc-gen-protolint_lib",
    srcs = ["main.go"],
    importpath = "github.com/yoheimuta/protolint/cmd/protoc-gen-protolint",
    visibility = ["//visibility:private"],
    deps = ["//internal/cmd/protocgenprotolint"],
)

go_binary(
    name = "protoc-gen-protolint",
    embed = [":protoc-gen-protolint_lib"],
    visibility = ["//visibility:public"],
)
