load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "protolint_lib",
    srcs = ["main.go"],
    importpath = "github.com/yoheimuta/protolint/cmd/protolint",
    visibility = ["//visibility:private"],
    deps = ["//internal/cmd"],
)

go_binary(
    name = "protolint",
    embed = [":protolint_lib"],
    visibility = ["//visibility:public"],
)
