load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "cmd",
    srcs = ["cmd.go"],
    importpath = "github.com/yoheimuta/protolint/internal/cmd",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/cmd/subcmds/lint",
        "//internal/cmd/subcmds/list",
        "//internal/osutil",
    ],
)
