load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "rule",
    srcs = ["rule.go"],
    importpath = "github.com/yoheimuta/protolint/linter/rule",
    visibility = ["//visibility:public"],
    deps = [
        "//linter/report",
        "@com_github_yoheimuta_go_protoparser_v4//parser:go_default_library",
    ],
)
