load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "multipleFixersApplicable_proto",
    srcs = ["multipleFixersApplicable.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "multipleFixersApplicable_go_proto",
    importpath = "github.com/yoheimuta/protolint/_example/proto/issue_111",
    proto = ":multipleFixersApplicable_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "issue_111",
    embed = [":multipleFixersApplicable_go_proto"],
    importpath = "github.com/yoheimuta/protolint/_example/proto/issue_111",
    visibility = ["//visibility:public"],
)
