load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "issue_292_proto",
    srcs = [
        "trailingcomment.proto",
        "trailingcomment2.proto",
        "trailingcomment3.proto",
    ],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "issue_292_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/yoheimuta/protolint/_example/proto/issue_292",
    proto = ":issue_292_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "issue_292",
    embed = [":issue_292_go_proto"],
    importpath = "github.com/yoheimuta/protolint/_example/proto/issue_292",
    visibility = ["//visibility:public"],
)
