load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "validatortest_proto",
    srcs = ["oneof_options.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "//github.com/gogo/protobuf/gogoproto:gogoproto_proto",
        "//github.com/mwitkow/go-proto-validators:validators_proto",
    ],
)

go_proto_library(
    name = "validatortest_go_proto",
    importpath = "github.com/yoheimuta/protolint/_example/proto/issue_88",
    proto = ":validatortest_proto",
    visibility = ["//visibility:public"],
    deps = [
        "//github.com/gogo/protobuf/gogoproto:gogo_proto",
        "//github.com/mwitkow/go-proto-validators:validator_proto",
    ],
)

go_library(
    name = "issue_88",
    embed = [":validatortest_go_proto"],
    importpath = "github.com/yoheimuta/protolint/_example/proto/issue_88",
    visibility = ["//visibility:public"],
)
