load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "enumFieldNamesUpperSnakeCase_proto",
    srcs = [
        "disable_next.proto",
        "disable_this.proto",
        "invalid.proto",
        "upperSnakeCase.proto",
    ],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "enumFieldNamesUpperSnakeCase_go_proto",
    importpath = "github.com/yoheimuta/protolint/_testdata/rules/enumFieldNamesUpperSnakeCase",
    proto = ":enumFieldNamesUpperSnakeCase_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "enumFieldNamesUpperSnakeCase",
    embed = [":enumFieldNamesUpperSnakeCase_go_proto"],
    importpath = "github.com/yoheimuta/protolint/_testdata/rules/enumFieldNamesUpperSnakeCase",
    visibility = ["//visibility:public"],
)
