load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "enumFieldNamesZeroValueEndWith_proto",
    srcs = [
        "disable_next.proto",
        "disable_this.proto",
        "invalid.proto",
        "suffix.proto",
    ],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "enumFieldNamesZeroValueEndWith_go_proto",
    importpath = "github.com/yoheimuta/protolint/_testdata/rules/enumFieldNamesZeroValueEndWith",
    proto = ":enumFieldNamesZeroValueEndWith_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "enumFieldNamesZeroValueEndWith",
    embed = [":enumFieldNamesZeroValueEndWith_go_proto"],
    importpath = "github.com/yoheimuta/protolint/_testdata/rules/enumFieldNamesZeroValueEndWith",
    visibility = ["//visibility:public"],
)
