load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "fieldNamesLowerSnakeCase_proto",
    srcs = [
        "disable_next.proto",
        "disable_this.proto",
        "invalid.proto",
        "lower_snake_case.proto",
    ],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "fieldNamesLowerSnakeCase_go_proto",
    importpath = "github.com/yoheimuta/protolint/_testdata/rules/fieldNamesLowerSnakeCase",
    proto = ":fieldNamesLowerSnakeCase_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "fieldNamesLowerSnakeCase",
    embed = [":fieldNamesLowerSnakeCase_go_proto"],
    importpath = "github.com/yoheimuta/protolint/_testdata/rules/fieldNamesLowerSnakeCase",
    visibility = ["//visibility:public"],
)
